--- a/package.json
+++ b/package.json
@@ -32,6 +32,10 @@
         "@radix-ui/react-navigation-menu": "^1.1.3",
         "@radix-ui/react-slot": "^1.0.2",
         "@simplewebauthn/server": "^9.0.3",
+        "@tailwindcss/postcss": "^4.1.17",
+        "@tiptap/pm": "^3.10.3",
+        "@tiptap/react": "^3.10.3",
+        "@tiptap/starter-kit": "^3.10.3",
         "@vercel/kv": "^1.0.1",
         "bcryptjs": "^3.0.2",
         "class-variance-authority": "^0.7.0",
@@ -52,7 +56,7 @@
         "autoprefixer": "^10.4.15",
         "postcss": "^8.4.29",
         "prisma": "^6.18.0",
-        "tailwindcss": "^3.3.3",
+        "tailwindcss": "^4.1.17",
         "typescript": "^5.2.2"
     },
     "engines": {
