--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
         "@auth/unstorage-adapter": "^2.0.0",
         "@neondatabase/serverless": "^1.0.2",
         "@prisma/adapter-neon": "^6.18.0",
-        "@prisma/client": "^6.18.0",
+        "@prisma/client": "^6.19.0",
         "@prisma/extension-accelerate": "^2.0.2",
         "@radix-ui/react-avatar": "^1.0.3",
         "@radix-ui/react-collapsible": "^1.0.3",
@@ -33,6 +33,38 @@
         "@radix-ui/react-slot": "^1.0.2",
         "@simplewebauthn/server": "^9.0.3",
         "@tailwindcss/postcss": "^4.1.17",
+        "@tiptap/extension-blockquote": "^3.10.5",
+        "@tiptap/extension-bullet-list": "^3.10.5",
+        "@tiptap/extension-character-count": "^3.10.5",
+        "@tiptap/extension-code-block-lowlight": "^3.10.5",
+        "@tiptap/extension-color": "^3.10.5",
+        "@tiptap/extension-dropcursor": "^3.10.5",
+        "@tiptap/extension-emoji": "^3.10.5",
+        "@tiptap/extension-file-handler": "^3.10.5",
+        "@tiptap/extension-gapcursor": "^3.10.5",
+        "@tiptap/extension-hard-break": "^3.10.5",
+        "@tiptap/extension-heading": "^3.10.5",
+        "@tiptap/extension-highlight": "^3.10.5",
+        "@tiptap/extension-horizontal-rule": "^3.10.5",
+        "@tiptap/extension-image": "^3.10.5",
+        "@tiptap/extension-invisible-characters": "^3.10.5",
+        "@tiptap/extension-list-item": "^3.10.5",
+        "@tiptap/extension-mention": "^3.10.5",
+        "@tiptap/extension-ordered-list": "^3.10.5",
+        "@tiptap/extension-placeholder": "^3.10.5",
+        "@tiptap/extension-subscript": "^3.10.5",
+        "@tiptap/extension-superscript": "^3.10.5",
+        "@tiptap/extension-table": "^3.10.5",
+        "@tiptap/extension-table-cell": "^3.10.5",
+        "@tiptap/extension-table-header": "^3.10.5",
+        "@tiptap/extension-table-row": "^3.10.5",
+        "@tiptap/extension-task-item": "^3.10.5",
+        "@tiptap/extension-task-list": "^3.10.5",
+        "@tiptap/extension-text-align": "^3.10.5",
+        "@tiptap/extension-text-style": "^3.10.5",
+        "@tiptap/extension-typography": "^3.10.5",
+        "@tiptap/extension-youtube": "^3.10.5",
+        "@tiptap/extensions": "^3.10.5",
         "@tiptap/pm": "^3.10.3",
         "@tiptap/react": "^3.10.3",
         "@tiptap/starter-kit": "^3.10.3",
@@ -40,6 +72,7 @@
         "bcryptjs": "^3.0.2",
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.0.0",
+        "lowlight": "^3.3.0",
         "lucide-react": "^0.274.0",
         "next": "latest",
         "next-auth": "beta",
@@ -50,12 +83,13 @@
         "unstorage": "^1.10.1"
     },
     "devDependencies": {
+        "@iconify-json/solar": "^1.2.5",
         "@types/node": "^20.12.8",
         "@types/react": "^18.2.23",
         "@types/react-dom": "^18.2.8",
         "autoprefixer": "^10.4.15",
         "postcss": "^8.4.29",
-        "prisma": "^6.18.0",
+        "prisma": "^6.19.0",
         "tailwindcss": "^4.1.17",
         "typescript": "^5.2.2"
     },
