--- a/package.json
+++ b/package.json
@@ -22,6 +22,13 @@
         "@auth/neon-adapter": "^1.11.1",
         "@auth/prisma-adapter": "^2.11.1",
         "@auth/unstorage-adapter": "^2.0.0",
+        "@mantine/code-highlight": "^8.3.7",
+        "@mantine/core": "^8.3.7",
+        "@mantine/dates": "^8.3.7",
+        "@mantine/dropzone": "^8.3.7",
+        "@mantine/form": "^8.3.7",
+        "@mantine/hooks": "^8.3.7",
+        "@mantine/modals": "^8.3.7",
         "@neondatabase/serverless": "^1.0.2",
         "@prisma/adapter-neon": "^6.18.0",
         "@prisma/client": "^6.19.0",
@@ -68,18 +75,21 @@
         "@tiptap/pm": "^3.10.3",
         "@tiptap/react": "^3.10.3",
         "@tiptap/starter-kit": "^3.10.3",
+        "@vercel/blob": "^2.0.0",
         "@vercel/kv": "^1.0.1",
         "bcryptjs": "^3.0.2",
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.0.0",
+        "dayjs": "^1.11.19",
         "lowlight": "^3.3.0",
-        "lucide-react": "^0.274.0",
+        "lucide-react": "^0.553.0",
         "next": "latest",
         "next-auth": "beta",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "tailwind-merge": "^1.14.0",
         "tailwindcss-animate": "^1.0.7",
+        "tiptap-extension-resizable-image": "^2.0.0",
         "unstorage": "^1.10.1"
     },
     "devDependencies": {
@@ -88,7 +98,9 @@
         "@types/react": "^18.2.23",
         "@types/react-dom": "^18.2.8",
         "autoprefixer": "^10.4.15",
-        "postcss": "^8.4.29",
+        "postcss": "^8.5.6",
+        "postcss-preset-mantine": "^1.18.0",
+        "postcss-simple-vars": "^7.0.1",
         "prisma": "^6.19.0",
         "tailwindcss": "^4.1.17",
         "typescript": "^5.2.2"
