rota de post no bd + barra de ediçao

--- a/package.json
+++ b/package.json
@@ -77,12 +77,14 @@
         "@tiptap/starter-kit": "^3.10.3",
         "@vercel/blob": "^2.0.0",
         "@vercel/kv": "^1.0.1",
+        "axios": "^1.13.2",
         "bcryptjs": "^3.0.2",
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.0.0",
         "dayjs": "^1.11.19",
         "lowlight": "^3.3.0",
         "lucide-react": "^0.553.0",
+        "nanoid": "^5.1.6",
         "next": "latest",
         "next-auth": "beta",
         "react": "^18.2.0",
