cards do spotfy bonitinhos usando vibrant-colors

--- a/package.json
+++ b/package.json
@@ -75,18 +75,21 @@
         "@tiptap/pm": "^3.10.3",
         "@tiptap/react": "^3.10.3",
         "@tiptap/starter-kit": "^3.10.3",
+        "@types/colorthief": "^2.6.0",
         "@vercel/blob": "^2.0.0",
         "@vercel/kv": "^1.0.1",
         "axios": "^1.13.2",
         "bcryptjs": "^3.0.2",
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.0.0",
+        "colorthief": "^2.6.0",
         "dayjs": "^1.11.19",
         "lowlight": "^3.3.0",
         "lucide-react": "^0.553.0",
         "nanoid": "^5.1.6",
         "next": "latest",
         "next-auth": "beta",
+        "node-vibrant": "^4.0.3",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "tailwind-merge": "^1.14.0",
