--- a/package.json
+++ b/package.json
@@ -87,7 +87,7 @@
         "lowlight": "^3.3.0",
         "lucide-react": "^0.553.0",
         "nanoid": "^5.1.6",
-        "next": "latest",
+        "next": "^16.0.3",
         "next-auth": "beta",
         "node-vibrant": "^4.0.3",
         "react": "^18.2.0",
